Bug fix- Dark Mode features and overflow feature

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ html, body, #root {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   text-align: center;
 }
 
@@ -88,6 +89,11 @@ body.dark-mode .app-header {
   background-color: #1e1e1e;
   color: #ffffff;
 }
+
+body.dark-mode .app-header {
+  background-color: #1e1e1e;
+  color: #ffffff;
+}.mapview-sidebar
 
 body.dark-mode .sidebar {
   background-color: #1e1e1e;
